--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
   </head>
   <body>
 
-  <div class="container">
+  <div class="container-fluid">
+    <div class="jumbotron">
+      <h2>Selamat Datang</h2>
+      <p>Aplikasi Restoran</p>
+      <button class="btn btn-primary">Start</button>
+    </div>
     <div class="row">
       <div class="col-lg-12 col-xs-12">
-      <center> <h2>MENU</h2> </center>
+          <h2 style="text-align:center">MENU</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-xs-4">
+      <div class="col-md-4 col-xs-4">
         <button class="btn btn-primary">Tambah</button>
       </div>
-      <div class="col-lg-4 col-xs-offset-4 col-xs-8">
+      <div class="col-md-4 col-xs-4">
         <button class="btn btn-danger">Hapus</button>
       </div>
-      <div class="col-lg-4 col-xs-offset-8 col-xs-4"> 
+      <div class="col-md-4 col-xs-4"> 
         <button class="btn btn-warning">Edit</button>
       </div>
     </div>
